force-app/main/default/objects/ListePhoningVendeur__c/ListePhoningVendeur__c.object-meta.xml
<CustomObject>
    <description>Liste des phones regroupés pour être débriefés par un vendeur.</description>
    <label>Liste de phones</label>
    <nameField>
        <label>Nom de la liste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listes de phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>