force-app/main/default/objects/ListePhoningVendeur__c/fields/codePostal_Filtre__c.field-meta.xml
<CustomField>
    <fullName>codePostal_Filtre__c</fullName>
    <label>Critère (Code postal)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>