force-app/main/default/objects/ListePhoningVendeur__c/fields/dateAnnulation__c.field-meta.xml
<CustomField>
    <fullName>dateAnnulation__c</fullName>
    <label>Date d’annulation</label>
    <type>DateTime</type>
</CustomField>