force-app/main/default/objects/ListePhoningVendeur__c/fields/dernierAppel_Filter__c.field-meta.xml
<CustomField>
    <fullName>dernierAppel_Filter__c</fullName>
    <label>Critère (Dernier appel)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>3 mois</fullName>
            </value>
            <value>
                <fullName>6 mois</fullName>
            </value>
            <value>
                <fullName>9 mois</fullName>
            </value>
            <value>
                <fullName>1 an</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>