force-app/main/default/objects/ListePhoningVendeur__c/fields/DR_Filtre__c.field-meta.xml
<CustomField>
    <fullName>DR_Filtre__c</fullName>
    <label>Critère (DR)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>