force-app/main/default/objects/ListePhoningVendeur__c/fields/DV_Filtre__c.field-meta.xml
<CustomField>
    <fullName>DV_Filtre__c</fullName>
    <label>Critère (DV)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>