force-app/main/default/objects/ListePhoningVendeur__c/fields/GDPR_dateExpiration__c.field-meta.xml
<CustomField>
    <fullName>GDPR_dateExpiration__c</fullName>
    <description>Date (excluse) à partir de laquelle l’enregistrement doit être supprimé</description>
    <formula>IF(user__r.IsActive, ADDMONTHS(CreatedDate, 3), NOW()-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date expiration (GDPR)</label>
    <type>Date</type>
</CustomField>