force-app/main/default/objects/ListePhoningVendeur__c/fields/magasin_Filtre__c.field-meta.xml
<CustomField>
    <fullName>magasin_Filtre__c</fullName>
    <label>Critère (Magasin)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>