force-app/main/default/objects/ListePhoningVendeur__c/fields/motifAnnulation__c.field-meta.xml
<CustomField>
    <fullName>motifAnnulation__c</fullName>
    <label>Motif d’annulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>