force-app/main/default/objects/ListePhoningVendeur__c/fields/nbAppels__c.field-meta.xml
<CustomField>
    <fullName>nbAppels__c</fullName>
    <description>Nombre de comptes appelés, c’est-à-dire pour lesquels il y a eu un appel</description>
    <label>Nombre d’appels</label>
    <summaryFilterItems>
        <field>PhoningVendeur__c.appelEffectue__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </summaryFilterItems>
    <summaryForeignKey>PhoningVendeur__c.liste__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>