force-app/main/default/objects/ListePhoningVendeur__c/fields/nbArgumentations__c.field-meta.xml
<CustomField>
    <fullName>nbArgumentations__c</fullName>
    <description>Nombre de comptes argumentés, c’est-à-dire pour lesquels il y a eu une argumentation</description>
    <label>Nombre d’argumentations</label>
    <summaryFilterItems>
        <field>PhoningVendeur__c.argumentationEffectuee__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </summaryFilterItems>
    <summaryForeignKey>PhoningVendeur__c.liste__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>