force-app/main/default/objects/ListePhoningVendeur__c/fields/nbComptesADebriefer__c.field-meta.xml
<CustomField>
    <fullName>nbComptesADebriefer__c</fullName>
    <description>Nombre de comptes associés à la liste de phones quelque soit leur statut de débriefing</description>
    <label>Comptes à débriefer</label>
    <summaryForeignKey>PhoningVendeur__c.liste__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>