force-app/main/default/objects/ListePhoningVendeur__c/fields/nbComptesDebriefes__c.field-meta.xml
<CustomField>
    <fullName>nbComptesDebriefes__c</fullName>
    <description>Nombre de comptes associés à la liste de phones débriefés</description>
    <label>Comptes débriefés</label>
    <summaryFilterItems>
        <field>PhoningVendeur__c.debriefe__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </summaryFilterItems>
    <summaryForeignKey>PhoningVendeur__c.liste__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>