force-app/main/default/objects/ListePhoningVendeur__c/fields/nbRDV__c.field-meta.xml
<CustomField>
    <fullName>nbRDV__c</fullName>
    <description>Nombre de comptes sur lesquels un RDV a été positionné</description>
    <label>Nombre de RDV</label>
    <summaryFilterItems>
        <field>PhoningVendeur__c.RDV__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </summaryFilterItems>
    <summaryForeignKey>PhoningVendeur__c.liste__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>