force-app/main/default/objects/ListePhoningVendeur__c/fields/proprietaire_Filtre__c.field-meta.xml
<CustomField>
    <fullName>proprietaire_Filtre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Critère (Propriétaire)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>proprietaire_Filtre_ListeDePhones</relationshipName>
    <type>Lookup</type>
</CustomField>