force-app/main/default/objects/ListePhoningVendeur__c/fields/recordType_Filtre__c.field-meta.xml
<CustomField>
    <fullName>recordType_Filtre__c</fullName>
    <label>Critère (Type d’enregistrement)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>