force-app/main/default/objects/ListePhoningVendeur__c/fields/rue1_Filtre__c.field-meta.xml
<CustomField>
    <fullName>rue1_Filtre__c</fullName>
    <label>Critère (Rue 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>