force-app/main/default/objects/ListePhoningVendeur__c/fields/rue3_Filtre__c.field-meta.xml
<CustomField>
    <fullName>rue3_Filtre__c</fullName>
    <label>Critère (Rue 3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>