force-app/main/default/objects/ListePhoningVendeur__c/fields/statut__c.field-meta.xml
<CustomField>
    <fullName>statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
                <default>true</default>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Débriefée partiellement</fullName>
            </value>
            <value>
                <fullName>Débriefée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>