force-app/main/default/objects/ListePhoningVendeur__c/fields/typeCompte_Filtre__c.field-meta.xml
<CustomField>
    <fullName>typeCompte_Filtre__c</fullName>
    <label>Critère (Type de compte)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>