force-app/main/default/objects/ListePhoningVendeur__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendeur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>user_ListeDePhones</relationshipName>
    <type>Lookup</type>
</CustomField>