force-app/main/default/objects/ListePhoningVendeur__c/fields/ville_Filtre__c.field-meta.xml
<CustomField>
    <fullName>ville_Filtre__c</fullName>
    <label>Critère (Ville)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>